--- a/src/Aboutus/index.html
+++ b/src/Aboutus/index.html
@@ -3,25 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="R-icon" href="/asset/img/icon/RUANG.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <title>Our Team Section</title>
-    <link rel="stylesheet" href="/asset/css/styleabout.css" />
+    <link rel="stylesheet" href="/asset/css/style.about.css" />
   </head>
   <body>
     <!-- AWAL NAVBAR -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="/src/Home/index.html"> <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" /> RUANG NGAJI</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/src/Home/index.html">
+          <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" />
+          RUANG NGAJI</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/src/Home/index.html">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/src/Home/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-ixtem">
-              <a class="nav-link" href="/src/Aboutus/index.html">Tentang Kami</a>
+              <a class="nav-link" href="/src/Aboutus/index.html"
+                >Tentang Kami</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Kontak Kami</a>
@@ -42,8 +65,10 @@
           <h3>Wildan</h3>
           <p class="role">Informatics engineering student</p>
           <p>
-            Holaa!! Perkenalkan namaku Wildan Krisna Hakim biasa dipanggil pragos, aku mahasiswa semester 1 Teknik Informatika di Politeknik Elektronika Negeri Surabaya. "Ruang Makmur" adalah project website pertamaku bersama rekan satu
-            kelompokku lainnya
+            Holaa!! Perkenalkan namaku Wildan Krisna Hakim biasa dipanggil
+            pragos, aku mahasiswa semester 1 Teknik Informatika di Politeknik
+            Elektronika Negeri Surabaya. "Ruang Makmur" adalah project website
+            pertamaku bersama rekan satu kelompokku lainnya
           </p>
         </div>
         <div class="team_member">
@@ -53,7 +78,10 @@
           <h3>Achmad</h3>
           <p class="role">Informatics engineering student</p>
           <p>
-            Assalammualaikum, Perkenalkan namaku Achmad Risel Araby biasanya teman-teman memanggilku Achmad. Aku adalah mahasiswa Teknik Informatika semester 1 di PENS, semoga project kami "Ruang Makmur" bisa berguna untuk kalian semua.
+            Assalammualaikum, Perkenalkan namaku Achmad Risel Araby biasanya
+            teman-teman memanggilku Achmad. Aku adalah mahasiswa Teknik
+            Informatika semester 1 di PENS, semoga project kami "Ruang Makmur"
+            bisa berguna untuk kalian semua.
           </p>
         </div>
         <div class="team_member">
@@ -62,7 +90,11 @@
           </div>
           <h3>Ghaly</h3>
           <p class="role">Informatics engineering student</p>
-          <p>haloo!!, Aku Ghaly Abrarian Putra yang biasa dipanggil Ghaly, Aku sedang berkuliah di Politeknik Elektronika Negeri Surabaya, dengan jurusan Teknik Informatika.</p>
+          <p>
+            haloo!!, Aku Ghaly Abrarian Putra yang biasa dipanggil Ghaly, Aku
+            sedang berkuliah di Politeknik Elektronika Negeri Surabaya, dengan
+            jurusan Teknik Informatika.
+          </p>
         </div>
       </div>
     </div>
