--- a/src/DetailDonasi/dhf.html
+++ b/src/DetailDonasi/dhf.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- link style & boostrap &js -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/asset/css/styledonasi.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/asset/css/style.donasi.css" />
 
     <title>Ruang Berkah</title>
   </head>
@@ -16,14 +21,30 @@
     <!-- AWAL NAVBAR -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="/src/Home/index.html"> <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" /> RUANG BERKAH</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/src/Home/index.html">
+          <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" />
+          RUANG BERKAH</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/src/Home/index.html">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/src/Home/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a
@@ -48,10 +69,19 @@
         <img src="/asset/img/donasi/Dhuafa.png" />
         <h1>Bantu Ribuan Kaum Dhuafa Berobat</h1>
         <p>
-          Sungguh terbuka lebar pahala bagi kita yang senantiasa berjibaku menolong ke sesama khususnya menolong fakir miskin dan dhuafa. Lewat kasih dan sayangmu, ratusan duafa terlantar bisa meningkatkan kualitas hidup dan lanjutkan
-          pengobatan!tak semua orang beruntung bisa menjalani hari tua dengan bahagia. Bagi mereka lansia dhuafa, tak jarang diserang penyakit yang awalnya terlihat sepele, seperti darah tinggi… pilunya, semua itu memicu penyumbatan
-          pembuluh darah dan membuat mereka harus dirawat intensif.Biaya RS yang mahal nyatanya amat mencekik. Jangankan untuk menebus semua itu, ongkos saja kadang mereka tak punya. Sebagai langkah nyata mebantu duafa, RUANG DONASI bersama
-          Yayasan Penghubung Kebaikan menginisiasi gerakan Bantu Dhuafa Berobat. Kami berharap program ini bisa menyapa dhuafa yang tidak bisa mendapatkan perawatan memadai jadi bisa dijangkau paramedis.
+          Sungguh terbuka lebar pahala bagi kita yang senantiasa berjibaku
+          menolong ke sesama khususnya menolong fakir miskin dan dhuafa. Lewat
+          kasih dan sayangmu, ratusan duafa terlantar bisa meningkatkan kualitas
+          hidup dan lanjutkan pengobatan!tak semua orang beruntung bisa
+          menjalani hari tua dengan bahagia. Bagi mereka lansia dhuafa, tak
+          jarang diserang penyakit yang awalnya terlihat sepele, seperti darah
+          tinggi… pilunya, semua itu memicu penyumbatan pembuluh darah dan
+          membuat mereka harus dirawat intensif.Biaya RS yang mahal nyatanya
+          amat mencekik. Jangankan untuk menebus semua itu, ongkos saja kadang
+          mereka tak punya. Sebagai langkah nyata mebantu duafa, RUANG DONASI
+          bersama Yayasan Penghubung Kebaikan menginisiasi gerakan Bantu Dhuafa
+          Berobat. Kami berharap program ini bisa menyapa dhuafa yang tidak bisa
+          mendapatkan perawatan memadai jadi bisa dijangkau paramedis.
         </p>
       </div>
 
@@ -80,16 +110,58 @@
       <h2>Nominal Donasi</h2>
       <div class="button-row" id="buttonRow">
         <!-- Baris 1 -->
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(10000, this)">Rp10.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(25000, this)">Rp25.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(50000, this)">Rp50.000</button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(10000, this)"
+        >
+          Rp10.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(25000, this)"
+        >
+          Rp25.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(50000, this)"
+        >
+          Rp50.000
+        </button>
         <!-- Baris 2 -->
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(100000, this)">Rp100.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(200000, this)">Rp200.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(500000, this)">Rp500.000</button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(100000, this)"
+        >
+          Rp100.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(200000, this)"
+        >
+          Rp200.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(500000, this)"
+        >
+          Rp500.000
+        </button>
       </div>
       <div class="nextbut">
-        <button id="continueButton" class="buttonnext" onclick="continueToNextPage()">LANJUT PEMBAYARAN</button>
+        <button
+          id="continueButton"
+          class="buttonnext"
+          onclick="continueToNextPage()"
+        >
+          LANJUT PEMBAYARAN
+        </button>
       </div>
     </div>
     <!-- AKHIR BUTTON NOMINAL -->
