--- a/src/DetailDonasi/libya.html
+++ b/src/DetailDonasi/libya.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- link style & boostrap &js -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/asset/css/styledonasi.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/asset/css/style.donasi.css" />
 
     <title>Ruang Berkah</title>
   </head>
@@ -16,14 +21,30 @@
     <!-- AWAL NAVBAR -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="/src/Home/index.html"> <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" /> RUANG BERKAH</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/src/Home/index.html">
+          <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" />
+          RUANG BERKAH</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/src/Home/index.html">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/src/Home/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a
@@ -48,8 +69,13 @@
         <img src="/asset/img/donasi/LIBYA.png" />
         <h1>Penyintas Banjir Bandang di Libya</h1>
         <p>
-          Bencana banjir bandang dan badai melanda wilayah bagian timur Libya pada Senin (11/9).Akibat bencana tersebut, ribuan warga meninggal dunia bahkan diperkirakan akan meningkat hingga 20.000 jiwa (jawapos.com). Rumah-rumah warga
-          rusak berat, sehingga saat ini ribuan warga terpaksa mengungsi dan membutuhkan bantuan segera.#OrangBaik, BAZNAS mengajak sahabat semua mari bersama tebar kepedulian bantu warga terdampak bencana di Libya.
+          Bencana banjir bandang dan badai melanda wilayah bagian timur Libya
+          pada Senin (11/9).Akibat bencana tersebut, ribuan warga meninggal
+          dunia bahkan diperkirakan akan meningkat hingga 20.000 jiwa
+          (jawapos.com). Rumah-rumah warga rusak berat, sehingga saat ini ribuan
+          warga terpaksa mengungsi dan membutuhkan bantuan segera.#OrangBaik,
+          BAZNAS mengajak sahabat semua mari bersama tebar kepedulian bantu
+          warga terdampak bencana di Libya.
         </p>
       </div>
 
@@ -78,16 +104,58 @@
       <h2>Nominal Donasi</h2>
       <div class="button-row" id="buttonRow">
         <!-- Baris 1 -->
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(10000, this)">Rp10.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(25000, this)">Rp25.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(50000, this)">Rp50.000</button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(10000, this)"
+        >
+          Rp10.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(25000, this)"
+        >
+          Rp25.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(50000, this)"
+        >
+          Rp50.000
+        </button>
         <!-- Baris 2 -->
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(100000, this)">Rp100.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(200000, this)">Rp200.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(500000, this)">Rp500.000</button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(100000, this)"
+        >
+          Rp100.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(200000, this)"
+        >
+          Rp200.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(500000, this)"
+        >
+          Rp500.000
+        </button>
       </div>
       <div class="nextbut">
-        <button id="continueButton" class="buttonnext" onclick="continueToNextPage()">LANJUT PEMBAYARAN</button>
+        <button
+          id="continueButton"
+          class="buttonnext"
+          onclick="continueToNextPage()"
+        >
+          LANJUT PEMBAYARAN
+        </button>
       </div>
     </div>
     <!-- AKHIR BUTTON NOMINAL -->
