--- a/src/DetailDonasi/palestina.html
+++ b/src/DetailDonasi/palestina.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- link style & boostrap &js -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/asset/css/styledonasi.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/asset/css/style.donasi.css" />
 
     <title>Ruang Berkah</title>
   </head>
@@ -16,14 +21,30 @@
     <!-- AWAL NAVBAR -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="/src/Home/index.html"> <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" /> RUANG BERKAH</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/src/Home/index.html">
+          <img src="/asset/img/icon/logoR.gif" alt="LOGO" class="img-logo" />
+          RUANG BERKAH</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/src/Home/index.html">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/src/Home/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a
@@ -48,11 +69,22 @@
         <img src="/asset/img/donasi/PALESTIN1A.png" />
         <h1>Warga Palestina Butuh Bantuan Kita</h1>
         <p>
-          Data terkini (17/10), korban warga sipil yang meninggal dunia akibat serangan di Jalur Gaza, Palestina mencapai 2.900+ orang, 1.000+ diantaranya adalah anak-anak. Sedangkan, 10.000+ orang luka berat dan ratusan ribu warga lainnya
-          mengungsi. Namun, keadaan mereka di pengungsian sangat darurat, kebutuhan pokok mereka menipis! Sejak serangan Hamas akhir pekan lalu, Israel telah mengepung Gaza, memutus pasokan listrik, bahan bakar, makanan, barang dan air.
-          Pasokan listrik utama di Gaza padam setelah satu-satunya pembangkit listrik di sana kehabisan bahan bakar. Akibatnya, lebih dari 338.000 warga Palestina yang mengungsi mengalami kekurangan makanan dan kebutuhan lainnya untuk
-          bertahan hidup. Saat ini, lembaga filantropi yang ada di sini telah mengirimkan sebagian bantuan kepada para korban. Namun, karena keadaan yang terbatas, kami masih membutuhkan bantuan para orang baik di Indonesia. Untuk itu,
-          dengan rendah hati kami mengajak teman-teman menyalurkan bantuan untuk mereka. Bantuan sekecil apapun akan sangat membantu saudara kita yang terdampak konflik di Palestina.
+          Data terkini (17/10), korban warga sipil yang meninggal dunia akibat
+          serangan di Jalur Gaza, Palestina mencapai 2.900+ orang, 1.000+
+          diantaranya adalah anak-anak. Sedangkan, 10.000+ orang luka berat dan
+          ratusan ribu warga lainnya mengungsi. Namun, keadaan mereka di
+          pengungsian sangat darurat, kebutuhan pokok mereka menipis! Sejak
+          serangan Hamas akhir pekan lalu, Israel telah mengepung Gaza, memutus
+          pasokan listrik, bahan bakar, makanan, barang dan air. Pasokan listrik
+          utama di Gaza padam setelah satu-satunya pembangkit listrik di sana
+          kehabisan bahan bakar. Akibatnya, lebih dari 338.000 warga Palestina
+          yang mengungsi mengalami kekurangan makanan dan kebutuhan lainnya
+          untuk bertahan hidup. Saat ini, lembaga filantropi yang ada di sini
+          telah mengirimkan sebagian bantuan kepada para korban. Namun, karena
+          keadaan yang terbatas, kami masih membutuhkan bantuan para orang baik
+          di Indonesia. Untuk itu, dengan rendah hati kami mengajak teman-teman
+          menyalurkan bantuan untuk mereka. Bantuan sekecil apapun akan sangat
+          membantu saudara kita yang terdampak konflik di Palestina.
         </p>
       </div>
 
@@ -82,16 +114,58 @@
       <h2>Nominal Donasi</h2>
       <div class="button-row" id="buttonRow">
         <!-- Baris 1 -->
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(10000, this)">Rp10.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(25000, this)">Rp25.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(50000, this)">Rp50.000</button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(10000, this)"
+        >
+          Rp10.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(25000, this)"
+        >
+          Rp25.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(50000, this)"
+        >
+          Rp50.000
+        </button>
         <!-- Baris 2 -->
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(100000, this)">Rp100.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(200000, this)">Rp200.000</button>
-        <button type="button" class="btn-custom" onclick="changeColor(this); selectAmount(500000, this)">Rp500.000</button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(100000, this)"
+        >
+          Rp100.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(200000, this)"
+        >
+          Rp200.000
+        </button>
+        <button
+          type="button"
+          class="btn-custom"
+          onclick="changeColor(this); selectAmount(500000, this)"
+        >
+          Rp500.000
+        </button>
       </div>
       <div class="nextbut">
-        <button id="continueButton" class="buttonnext" onclick="continueToNextPage()">LANJUT PEMBAYARAN</button>
+        <button
+          id="continueButton"
+          class="buttonnext"
+          onclick="continueToNextPage()"
+        >
+          LANJUT PEMBAYARAN
+        </button>
       </div>
     </div>
     <!-- AKHIR BUTTON NOMINAL -->
