--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="../../asset/css/home.css" />
+    <link rel="stylesheet" href="../../asset/css/style.home.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -47,16 +47,11 @@
         <span id="slide-4"></span>
         <span id="slide-5"></span>
         <div class="images">
-          <img src="../../img/carousel/quotes.png"/>
-          <img src="../../img/carousel/About us.png" />
-          <img src="../..//img/carousel/ruangdonasi.png" />
-          <img src="../..//img/carousel/flashdisk murajaah.png" />
-          <img src="../..//img/carousel/Buku anak-anak.png" />
-          <img src="/asset/img/carousel/muhammd-7.png" .. />
-          <img src="/asset/img/carousel/RUANG NGAJI.gif" />
-          <img src="/asset/img/carousel/RUANG DONASI.gif" />
-          <img src="/asset/img/carousel/flashdisk.png" />
-          <img src="/asset/img/carousel/BUKU.png" />
+          <img src="../../asset/img/carousel/muhammd-7.png" .. />
+          <img src="../../asset/img/carousel/RUANG NGAJI.gif" />
+          <img src="../../asset/img/carousel/RUANG DONASI.gif" />
+          <img src="../../asset/img/carousel/flashdisk.png" />
+          <img src="../../asset/img/carousel/BUKU.png" />
         </div>
       </div>
     </div>
